// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoList 组件 数据为空时样式渲染正常 1`] = `
<div
  className="do-list"
>
  <div
    className="do-list-title"
  >
    已经完成
    <div
      className="do-list-count"
      data-test="count"
    >
      0
    </div>
  </div>
  <ul
    className="do-list-ul"
  />
</div>
`;

exports[`DoList 组件 样式渲染正常 1`] = `
<div
  className="do-list"
>
  <div
    className="do-list-title"
  >
    已经完成
    <div
      className="do-list-count"
      data-test="count"
    >
      3
    </div>
  </div>
  <ul
    className="do-list-ul"
  >
    <li
      className="do-list-item"
      data-test="list-item"
      key="0"
    >
      <span>
        jest
      </span>
    </li>
    <li
      className="do-list-item"
      data-test="list-item"
      key="1"
    >
      <span>
        TDD
      </span>
    </li>
  </ul>
</div>
`;
